# wee-slack

./: .flake8  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  Dockerfile  Gemfile  LICENSE  Makefile  Pipfile  README.md  build.sh  combine.sh  extract_token_from_browser.py  foobar.py  generate_docs.py  generate_types_from_mocks.py  generate_weemoji.py  main.py  pyproject.toml  requirements.txt  slack.py  slack_extension.py  wee_slack.py  wee_slack.rb  weemoji.json
.github/workflows/: checks.yml  wee-slack.yml
_pytest/: conftest.py  test_command_reply.py  test_eventrouter.py  test_everything.py  test_formatted_name.py  test_formatting.py  test_helpers.py  test_http_check_ratelimited.py  test_linkifytext.py  test_presencechange.py  test_process_message.py  test_processreply.py  test_processsubteamcreated.py  test_processsubteamselfadded.py  test_processsubteamselfremoved.py  test_processsubteamupdated.py  test_processteamjoin.py  test_render_blocks.py  test_render_message.py  test_sendmessage.py  test_slackchannel.py  test_slackdmchannel.py  test_slackgroupchannel.py  test_slackmpdmchannel.py  test_slackrequest.py  test_slackteam.py  test_slackts.py  test_thread.py  test_topic_command.py  test_unfurl.py  test_unwrap_attachments.py  test_usergroup_print.py  test_utf8_helpers.py
_pytest/data/: message-changed.json  message-deleted.json  message-normal.json  message-normal2.json
_pytest/data/http/: rtm.start.json
_pytest/data/websocket/: 1483975206.59-subteam_created.json  1483975206.59-subteam_self_added.json  1483975206.59-subteam_self_removed.json  1483975206.59-subteam_updated.json  1485975367.79-reconnect_url.json  1485975408.19-user_typing.json  1485975420.36-user_typing.json  1485975421.33-message.json  1485975421.42-desktop_notification.json  1485975426.55-reaction_added.json  1485975428.76-reaction_removed.json  1485975458.35-channel_created.json  1485975458.87-channel_joined.json  1485975458.87-message.json  1485975462.62-update_thread_state.json  1485975462.62-user_typing.json  1485975476.62-channel_deleted.json  1485975476.86-group_join.json  1485975476.86-group_joined.json  1485975487.69-group_history_changed.json  1485975487.69-group_join.json  1485975493.19-group_joined.json  1485975493.23-message.json  (+89 more)
docs/: Commands.md  Options.md  contributing.md  oauth.html
mock_data/: slack_conversations_history_channel_public.json  slack_conversations_history_im.json  slack_conversations_info_channel_group.json  slack_conversations_info_channel_public.json  slack_conversations_info_im.json  slack_conversations_info_mpim_channel.json  slack_conversations_info_mpim_group.json  slack_info_channel_group.json  slack_info_channel_private.json  slack_info_channel_public.json  slack_info_im.json  slack_info_mpim_channel.json  slack_info_mpim_group.json  slack_rtm_connect.json  slack_usergroups_list.json  slack_users_conversations_im.json  slack_users_conversations_mpim.json  slack_users_conversations_private_channel.json  slack_users_conversations_public_channel.json  slack_users_info_bot.json  slack_users_info_person.json  slack_users_info_person_1.json  slack_users_info_person_2.json
scripts/: update_mocks.sh
slack/: __init__.py  api.py  commands.py  completions.py  config.py  error.py  globals.py  http.py  init.py  log.py  main.py  proxy.py  python_compatibility.py  register.py  shared.py  slack_api.py  slack_buffer.py  slack_conversation.py  slack_emoji.py  slack_message.py  slack_message_buffer.py  slack_search_buffer.py  slack_thread.py  slack_user.py  slack_workspace.py  task.py  util.py  weechat_buffer.py  weechat_config.py  weechat_http.py
spec/: slack_commands_spec.rb  spec_helper.rb
src/: config.py  debug.py  util.py  weechat_wrapper.py
tests/: conftest.py  test_commands.py  test_get_cookies.py  test_hook_process_hashtable.py  test_http_request.py  test_render_attachments.py  test_render_blocks.py  test_render_reactions.py  test_slackts.py  test_sleep.py  test_task_runner.py  test_unfurl.py  test_wee_slack.py
typings/: plyvel.pyi  slack_api.pyi  websocket.pyi
typings/slack_api/: slack_bots_info.pyi  slack_client_counts.pyi  slack_client_userboot.pyi  slack_common.pyi  slack_conversations_history.pyi  slack_conversations_info.pyi  slack_conversations_join.pyi  slack_conversations_list.pyi  slack_conversations_members.pyi  slack_conversations_open.pyi  slack_conversations_replies.pyi  slack_emoji.pyi  slack_error.pyi  slack_files_info.pyi  slack_profile.pyi  slack_rtm_connect.pyi  slack_team_info.pyi  slack_usergroups_info.pyi  slack_users_conversations.pyi  slack_users_info.pyi  slack_users_prefs.pyi
typings/slack_edgeapi/: slack_channels_search.pyi  slack_usergroups_info.pyi  slack_users_search.pyi
typings/slack_rtm/: slack_rtm_message.pyi
(+1 files in other folders)
