[project]
requires-python = ">=3.8"

[tool.poetry]
name = "wee-slack"
version = "3.0.0"
description = ""
license = "MIT"
authors = ["Trygve Aaberge <trygveaa@gmail.com>"]
readme = "README.md"
repository = "https://github.com/wee-slack/wee-slack"
# packages = [{include = "wee_slack"}]
# packages = [{ include = "." }]

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = ">=1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
typing-extensions = "^4.12.2"
pyright = "^1.1.368"
ruff = "^0.4.10"

[tool.pylint.main]
ignored-modules = ["weechat"]

[tool.pylint."messages control"]
disable = [
  "dangerous-default-value",        # inconvenient with types
  "inconsistent-return-statements", # no need when using typing
  "invalid-name",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-member",                      # incorrect reports
  "protected-access",               # covered by pyright
  "too-few-public-methods",         # too often bad advice
  "too-many-arguments",
  "too-many-instance-attributes",
]

[tool.pyright]
pythonVersion = "3.8"
strict = ["**"]
reportMissingModuleSource = false
include = ["main.py", "slack", "tests", "typings"]

[tool.ruff]
extend-exclude = ["typings/weechat.pyi"]

[tool.ruff.lint]
exclude = ["wee_slack.py", "_pytest/*"]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
