[project]
name = "wee-slack"
version = "3.0.0"
description = ""
license = "MIT"
authors = [{ name = "Trygve Aaberge", email = "trygveaa@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["websocket-client>=1.8.0"]

[project.urls]
Homepage = "https://github.com/wee-slack/wee-slack"
Repository = "https://github.com/wee-slack/wee-slack.git"

[dependency-groups]
dev = [
  "pyright>=1.1.398",
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0",
  "ruff>=0.11.4",
  "typing-extensions>=4.13.1",
]

[tool.pylint.main]
ignored-modules = ["weechat"]

[tool.pylint."messages control"]
disable = [
  "dangerous-default-value",        # inconvenient with types
  "inconsistent-return-statements", # no need when using typing
  "invalid-name",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "no-member",                      # incorrect reports
  "protected-access",               # covered by pyright
  "too-few-public-methods",         # too often bad advice
  "too-many-arguments",
  "too-many-instance-attributes",
]

[tool.pyright]
pythonVersion = "3.8"
strict = ["**"]
reportMissingModuleSource = false
include = ["main.py", "slack", "tests", "typings"]

[tool.ruff]
extend-exclude = ["typings/weechat.pyi"]

[tool.ruff.lint]
exclude = ["wee_slack.py", "_pytest/*"]
extend-select = ["I"]
